--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,56 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://sparkschools.workable.com/j/B614B09891'>SPARK Schools - Jobs: Programme Manager - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://riversidetechnology.workable.com/j/327EEB5B13'>Riverside Technology, inc. - Jobs: Program Manager (Science/IT) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/trendkite/6b566378-553a-4bd7-9873-b34a87f00c41'>TrendKite/Cision - Senior Technical Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://kingkong.workable.com/j/DD9E5B3CC9'>King Kong - Jobs: Digital Project Ringleader (Lead Generation and eCommerce Web Project Manager) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/markforged/2a1c8e9f-ae96-4260-9cef-3a8c2256f8c9'>Markforged - Technical Software Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://greatminds.recruitee.com/o/senior-it-project-managerscrum-master'>
+      Senior IT Project Manager/Scrum Master - Great Minds
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/project-manager-bnCyNSxCOr56eAeMg-44q7'>Project Manager #0042 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/instructure/8fca28fa-46d9-4a2a-887b-91ceb42b43ab'>Instructure - Project Manager, Custom Development</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4369175002'>Job Application for Project Manager - Customer Success at Arctic Wolf Networks</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692410600-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Astreya/743999692408884-demand-gen-marketing-program-manager'>Astreya Demand Gen Marketing Program Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999692408547-project-manager-at-bentonville-ar'>American IT Staff Project Manager at Bentonville, AR | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -49,14 +99,14 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://waremalcomb.applytojob.com/apply/LlCWnhlqax/Project-Manager-Architecture'>Project Manager, Architecture - Ware Malcomb - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1792029'>Job Application for Project Manager at AKQA</a></h5> 
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1792029'>Job Application for Project Manager at AKQA</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -64,7 +114,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/IYREub4tgF/Project-Manager-Buildings'>Project Manager - Buildings - Graham Construction - Career Page</a></h5> 
+<h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/IYREub4tgF/Project-Manager-Buildings'>Project Manager - Buildings - Graham Construction - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -240,11 +290,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/56C98377BC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/56C98377BC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/58EDF8831C'>Right At School - Jobs: Education Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/58EDF8831C'>Right At School - Jobs: Education Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -272,7 +322,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/88CC4E2E30'>Right At School - Jobs: After-School Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/88CC4E2E30'>Right At School - Jobs: After-School Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -300,7 +350,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/A8743C9701'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/A8743C9701'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -320,7 +370,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/CF2085DB41'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/CF2085DB41'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -364,7 +414,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/altisource/jobs/1760335'>Job Application for Project Manager at Altisource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1760335'>Job Application for Project Manager at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -396,55 +446,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/caminar/job/onzDafwt'>Caminar Careers - Program Manager, Substance Use (LMFT/LCSW)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/innerworkings/job/ofQxafww'>InnerWorkings Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/genesys/job/7xp73epniowr4tpcze58nc316a'>Project Manager | GENESYS Consulting Services, Inc.</a></h5> 
-<p><span class="badge badge-light">Rensselaer, NY</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/o0CAafw6'>LinkedIn Careers - Global Program Manager, LinkedIn Marketing Solutions</a></h5> 
-<p><span class="badge badge-light">San Francisco California</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/b8hotjgyyinb6nxiexh3azhaze'>Digital Marketing Project Manager | Current Openings</a></h5> 
-<p><span class="badge badge-light">Seattle, WA</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/roostify/jobs/4364939002'>Job Application for Technical Program Manager at Roostify</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/myriadsupply/jobs/4214971002?gh_jid=4214971002'>Job Application for Project Manager I  at Myriad360</a></h5> 
-<p><span class="badge badge-light">New York City</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/project-manager-electrical-engineering-6007'>Project Manager, Electrical Engineering - Stantec Careers</a></h5> 
-<p><span class="badge badge-light">Washington, United States</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/marketing-events-project-manager-cFiLxgRYmr6AS0aKkRyNN8'>Marketing Events Project Manager #5074 job at Avispa Technology in San Francisco, CA, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/caminar/job/onzDafwt'>Caminar Careers - Program Manager, Substance Use (LMFT/LCSW)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
